--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     font-family: 'Karla', sans-serif;
 }
 h1 {
+    font-size: 2em;
     margin: 1em 0;
 }
 h2  {
@@ -80,7 +81,7 @@ p {
 .sign-up-btn {
     margin-top: 1.5em;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19);
-    transition: background-color 0.25s;
+    transition: background-color 0.;
 }
 .sign-up-btn:hover {
     background-color: transparent;
