--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ p {
 .sign-up-btn {
     margin-top: 1.5em;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19);
-    transition: background-color 0.;
+    transition: background-color 0.25s;
 }
 .sign-up-btn:hover {
     background-color: transparent;
